[tool.poetry]
name = "wine"
version = "0.1.0"
description = ""
authors = ["Roman Okatev <nebulawalker@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
pandas = "^1.5.0"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
